k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evently
  labels:
    name: evently
    environment: production
